--- a/style/main.css
+++ b/style/main.css
@@ -45,11 +45,12 @@ h4{
 .search{
   position: relative;
   top: 60px;
-  margin-left: 30px;
+  margin-left: 40px;
   margin-bottom: 100px;
 }
 .search label{
   display: block;
+  margin-bottom: 10px;
 }
 .search .input{
   border-radius: 5px;
@@ -71,25 +72,26 @@ h4{
 
 .page-nav{
   position: relative;
-  margin-left: 30px;
+  padding: 0;
   font-size: 0;
 }
 .page-nav nav ul{
   position: absolute;
   margin: 0;
   list-style: none;
-  padding: 0;
 }
 .page-nav nav ul li{
   font-size: 16px;
   display: inline-block;
-  border: 1px solid #CCC;
+  border-top: 1px solid #CCC;
+  border-bottom: 1px solid #CCC;
   padding: 10px 15px 10px 15px;
-  margin: 0;
 }
 .first{
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  border-left: 1px solid #CCC;
+  border-right: 1px solid #CCC;
 }
 .second{
   padding-left: 20px;
@@ -98,4 +100,33 @@ h4{
 .last{
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  border-left: 1px solid #CCC;
+  border-right: 1px solid #CCC;
+}
+
+/* ----
+ *
+ * Listings
+ *
+ ----*/
+main{
+  position: relative;
+  margin-left: 30px;
+  margin-bottom: 100px;
+  top: 80px;
+}
+main ul{
+  position: absolute;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+main ul li{
+  margin: 10px;
+}
+.date, .location{
+  color: grey;
+}
+.posting-title {
+  margin: 10px;
 }
